--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 	--azul-secundario: #8094b0;
 	--celeste: #7f9caf;
 	--gris: #979692;
+	--gris-oscuro: rgb(51, 51, 51);
 }
 
 body {
@@ -166,6 +167,27 @@ form {
 
 label {
 	padding: 0.5rem 0;
+}
+
+/* Footer */
+footer {
+	background-color: var(--gris-oscuro);
+}
+
+.logo-social{
+	height: 3rem;
+	border: none;
+}
+
+#desarrollador {
+	font-size: 0.8rem;
+	color: var(--blanco);
+}
+
+#desarrollador a {
+	text-decoration: none;
+	color: var(--blanco);
+	font-weight: 600;
 }
 
 /* Boton whatsapp */
